--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^11.5.0",
+    "googleapis": "^148.0.0",
     "lucide-react": "^0.484.0",
     "next": "^15.2.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
+    "react-toastify": "^11.0.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
